Sat Nov 22 10:54:16 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* update.c (update_fileproc): Fix comment; direct checkout is
	still faster than patches for local but not for quite the
	same reasons.

	* add.c (add): Pass SEND_NO_CONTENTS to send_files.

Wed Nov 19 18:25:03 1997  Mike Glendinning  <mikeg@sequent.com>

	* update.c (patch_file_write): Missing cast provided.

Wed Nov 19 15:57:59 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_deltas): Solve trigraph problem (once and for all, I
	hope) with 3 calls to cvs_output.

Wed Nov 19 01:52:57 1997  Andy Piper <andyp@parallax.co.uk>
	and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* classify.c (Classify_File), cvs.h (struct vers_ts), vers_ts.c
	(Version_TS): Clarify NULL versus "" for options in comments.
	* vers_ts.c (Version_TS): Treat "" the same way as NULL in options
	and vers_ts->options.
	* sanity.sh: New tests binfiles-sticky5 through binfiles-17 test
	for this.

1997-11-16  Karl Fogel  <kfogel@floss.red-bean.com>

	* client.c (update_entries): parse server-sent entries line even
	in the case of "cvs export", because we need to know if -kb option
	is set.
	Init `options' to NULL like anything else.

Tue Nov 18 09:20:29 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* version.c: Change version number to 1.9.21.

	* Version 1.9.20.

Mon Nov 17 14:35:31 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c (server_updated): If scratched_file and noexec are set,
	clean up so we don't get a "duplicate Scratch_Entry" warning
	later.
	* sanity.sh: New tests conflicts3-10 to conflicts3-13, for this.

	* sanity.sh (conflicts3): Don't allow "file1 was lost" messages
	here; I don't think CVS actually produced them, and they don't
	belong.

Sun Nov 16 23:19:41 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Accept either "U file1" or "P file1".

Fri Nov 14 12:32:05 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c: Add comment about cleaning up ,foo, file on ^C.
